@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Archive the CPM logs, in the event of failure to install dependencies in
+      the first stage of the build.
 
 0.01      2021-01-04 22:23:35-08:00 America/Vancouver
     - Initial release
